# flutter_ffplay

./: .gitmodules  .metadata  README.md  local.properties  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cxx/: CMakeLists.txt  jni.cpp
android/src/main/jni/: CMakeLists.txt
android/src/main/kotlin/soko/ekibun/ffmpeg/: FfmpegPlugin.kt  FlutterFfplayPlugin.kt  PlaybackImpl.kt
cxx/: build.cmd  build.ffmpeg.sh  build.sh  ffi.cpp  ffi.h  ffmpeg.cmake  windows.hpp  wsl.wrap.sh
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/soko/ekibun/ffmpeg_example/: MainActivity.kt
example/android/app/src/profile/: AndroidManifest.xml
example/lib/: iohandler.dart  main.dart  protocol.dart
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: ffmpeg.dart  flutter_ffplay.dart  player.dart
lib/src/: codec.dart  ffi.dart  ffmpeg.dart  format.dart  frame.dart  io.dart  isolate.dart  playback.dart  protocol.dart  stream.dart
test/: CMakeLists.txt  ffmpeg_test.dart  mock.cpp  mock.dart  player_test.dart
windows/: CMakeLists.txt  audio.hpp  ffmpeg_plugin.cpp  flutter_ffplay_plugin.cpp  flutter_video_renderer.hpp  player_plugin.cpp
windows/include/ffmpeg/: ffmpeg_plugin.h
windows/include/flutter_ffplay/: flutter_ffplay_plugin.h
windows/include/player/: player_plugin.h
